--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,7 +25,9 @@ execute:
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      light: cosmo
+      dark: darkly
     css: styles.css
     toc: true
     
